--- a/index.html
+++ b/index.html
@@ -4,14 +4,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year me</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-  <header>
-
+  <header class="header">
+<div class="nav">
+    <h1 class="head">
+        All Thinks Are<br> Possible If You <br>believe
+    </h1>
+    <p id="paragraph">There are many variations of passages of Lorem Ipsum available,<br>but the majority have suffered alteration in some form, <br>by injected humour, or randomised words</p>
+    <button id="btn"> Contact Us</button>
+</div>
   </header>
-  <main></main>
+  <main>
+    <div class="container-info">
+        <img class="image" src="./images/Fahi__2_-removebg-preview.png" alt="">
+    <div class="info-text">
+        <h2 class=" info-head">
+            My failures of previous year
+        </h2>
+        <p class="info-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+        <ul>
+            <li><img class="check" src="./images/check.png" alt="">Contrary to popular belief, is not simply.</li>
+            <li><img class="check" src="./images/check.png" alt="">Contrary to popular belief.</li>
+            <li><img class="check" src="./images/check.png" alt="">Contrary to popular belief, is not simply.</li>
+            <li><img class="check" src="./images/check.png" alt="">Contrary to popular simply.</li>
+        </ul>
+    </div>
+    </div>
+<div class="Second-container">
+<h3>My plans</h3>
+<div class="expertise-area"
+>
+<div class="icon">
+
+    <img class="images" src="./images/icons/web.png">
+    <h4>Web Development</h4>
+    <p class="web-description">Lorem ipsum dolor sit amet.
+    </p>
+</div>
+<div class="icon">
+
+    <img class="images" src="./images/icons/js.png">
+    <h4>JavaScript</h4>
+    <p class="web-description">Lorem ipsum dolor sit amet.
+    </p>
+</div>
+<div class="icon">
+
+    <img class="images" src="./images/icons/smoke.png">
+    <h4>Smoking habit</h4>
+    <p class="web-description">Lorem ipsum dolor sit amet.
+    </p>
+</div>
+<div class="icon">
+
+    <img class="images" src="./images/icons/ecom.png">
+    <h4>ecommerce</h4>
+    <p class="web-description">Lorem ipsum dolor sit amet.
+    </p>
+</div>
+</div>
+<div class="image-container">
+    <img class="background-image" src="./images/watch.png">
+    <img class="overlay-image" src="./images/gradient2.png">
+    <div class="overlay-content">
+        <h5 class="watch-section-title"> Always keep a positive mindset</h5>
+        <button class="watch-section-button"> Call Now</button>
+    </div>
+</div>
+  </main>
   <footer>
-    
+<div class="left-footer-description-and-social-icon">
+    <div class="left-footer">
+        <h6 class="left-footer-title">Future</h6>
+        <p class="left-footer-description"> There are many variations of passages of lorem ipsum</p>
+        <p class="left-footer-description">Email: habibasultaafahi@gmail.com</p>
+        <p class="left-footer-description">Mobile Number: 19793519725</p>
+    </div>
+    <div>
+        <img class="social-icon"* src="./images/icons/fb.png" alt="">
+        <img class="social-icon"* src="./images/icons/twitter.png" alt="">
+        <img class="social-icon"* src="./images/icons/youtube.png" alt="">
+    </div>
+    <div class="right-footer">
+        <h2 class="subscribe">Subscribe</h2>
+        <input type="text" id="mail-fill" placeholder="Enter Your Email">
+        <button class="right-footer-button">Subscribe</button>
+    </div>
+</div>
   </footer>  
 </body>
 </html>
